--- a/admin.ui/www/templates/home/home.tpl.html
+++ b/admin.ui/www/templates/home/home.tpl.html
@@ -1,26 +1,17 @@
-<div>
-
-    <div class="row">
-        <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i>{{'测试过滤器'| samTest : 'aaa'}} </h3>
-            <ol class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                <li><i class="fa fa-laptop"></i>Dashboard</li>
-            </ol>
-        </div>
-        <h2 style="color: red">
-            {{vm.HomeData.Test}}
-        </h2>
+<div class="row">
+    <div class="col-lg-7 col-md-12 col-sm-12" ng-include="'templates/home/page/shortcut-channel.tpl.html'"></div>
+    <div class="col-lg-5 col-md-12 col-sm-12">
+        <sam-Panel>
+            <div class="panel-body">
+                <h3 class="panel-title">日历</h3>
+            </div>
+        </sam-Panel>
     </div>
-
-    <div class="row">
-        <button type="button" class="btn btn-success btn-lg" ng-click="vm.clickToOpen(1)">弹框</button>
-        <button type="button" class="btn  btn-success btn-lg " ng-click="vm.clickToOpen(2)">消息1</button>
-        <button type="button" class="btn  btn-success btn-lg " ng-click="vm.clickToOpen(3)">消息2</button>
-        <button type="button" class="btn  btn-success btn-lg " ng-click="vm.clickToOpen(4)">消息3</button>
-        <button type="button" class="btn  btn-success btn-lg " ng-click="vm.clickToOpen(5)">消息4</button>
-        <button type="button" class="btn  btn-success btn-lg " ng-click="vm.clickToOpen(6)">进度条</button>
-    </div>
-    <div class="row" ui-view="page1"></div>
-    <div class="row" ui-view="page2"></div>
+</div>
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12" ui-view="teamProfile"></div>
+</div>
+<div class="row">
+    <div class="col-lg-6 col-md-12 col-sm-12" ui-view="page1"></div>
+    <div class="col-lg-6 col-md-12 col-sm-12" ui-view="page2"></div>
 </div>
