--- a/admin.ui/www/templates/home/page2.tpl.html
+++ b/admin.ui/www/templates/home/page2.tpl.html
@@ -1,4 +1,11 @@
-<div>
-    <h1 ng-bind="svm.test"></h1>
-    <h2 style="color: red">这里是父控制器的 数据 {{vm.HomeData.Test}}</h2>
-</div>
+<sam-Panel>
+    <div class="panel-heading ">
+        <h3 class="panel-title">易鑫文化</h3>
+    </div>
+    <div class="panel-body">
+        <div>
+            <h1 ng-bind="svm.test"></h1>
+            <h2 style="color: red">这里是父控制器的 数据 {{vm.HomeData.Test}}</h2>
+        </div>
+    </div>
+</sam-Panel>
